--- a/src/views/addProduct.ejs
+++ b/src/views/addProduct.ejs
@@ -72,8 +72,12 @@
 
 
                     <h4 class="aclaracion">Imagen del producto</h4>
-                    <div class="file-select">
-                        <input type="file" name="image" id="image">
+                    <div class="contenedor-file">
+                        <label for="archivo">Elige un archivo 
+                            <i class="fa-regular fa-folder-open"></i>
+                        </label>
+                        <input type="file" id="archivo" name="userImg" accept=".png, .jpg">
+                        <h3 id="nombre"></h3>
                     </div>
 
                     <div>
@@ -136,6 +140,14 @@
                 <script src="emergente.js"></script>
 
             </form>
+
+            <script type="text/javascript">
+                let archivo = document.querySelector('#archivo');
+                archivo.addEventListener('change',()=>{
+                    document.querySelector('#nombre').innerText = 
+                    archivo.files[0].name
+                });
+            </script>
         </main>
 
         <!-- WHATSAPP -->
