--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -267,10 +267,21 @@ section {
     color: #fff;
 }
 
+.avatar {
+    text-align: center;
+    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+}
+
 .avatar img {
     border-radius: 100%;
-    width: 250px;
+    width: 100%;
+    height: 100%;
     border: 10px double #303030;
+    object-fit: cover;
+    object-position: center;
 }
 
 .numero-user {
@@ -307,6 +318,7 @@ section {
     font-size: 15px;
     color: #000;
     font-weight: bold;
+    width: 100%;
 }
 
 .cerrar-sesion button{
