--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -36,119 +36,142 @@
         <main>
 
             <form action="/user/register" method="POST" enctype="multipart/form-data">
-                <div class="caja-padre">  
+                <div class="caja-padre">
                     <div class="registrate">
                         <h2>¡Registrate!</h2>
                         <img src="/img/form.svg" alt="undraw-form">
                     </div>
 
                     <div>
-                        <input type="text"
-                         name="fullName" 
-                         placeholder="Nombre y apellido" 
-                         id="nombre-apellido"
-                         class = "normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%> " 
-                         value="<%= locals.oldData ? oldData.fullName : null %>"
-                         >
-                         
+                        <input type="text" name="fullName" placeholder="Nombre y apellido" id="nombre-apellido"
+                            class="normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%> "
+                            value="<%= locals.oldData ? oldData.fullName : null %>">
+
                     </div>
                     <% if (locals.errors && errors.fullName) { %>
                         <div class="mensaje-de-error">
-                            <i class="fas fa-exclamation-triangle"></i><%= errors.fullName.msg %> 
-                        
-                        </div> 
-                        <% } %> 
+                            <i class="fas fa-exclamation-triangle"></i>
+                            <%= errors.fullName.msg %>
 
-                    <div>
-                        <input type="text" name="username" placeholder="Nombre de usuario" class = "normal-input  <%= locals.errors && errors.username ? 'invalido' : null%> " 
-                        value="<%= locals.oldData ? oldData.username : null %>">
-                    </div>
-                    <% if (locals.errors && errors.username) { %>
-                        <div class="mensaje-de-error">
-                            <i class="fas fa-exclamation-triangle"></i><%= errors.username.msg %> 
-                        
-                        </div> 
+                        </div>
                         <% } %>
 
-                    <div>
-                        <input type="email" name="email" placeholder="E-mail" id="email" class = "normal-input  <%= locals.errors && errors.email ? 'invalido' : null%> " 
-                        value="<%= locals.oldData ? oldData.email : null %>" >
-                    </div>
-                    <% if (locals.errors && errors.email) { %>
-                        <div class="mensaje-de-error">
-                            <i class="fas fa-exclamation-triangle"></i><%= errors.email.msg %> 
-                        
-                        </div> 
-                        <% } %>
+                            <div>
+                                <input type="text" name="username" placeholder="Nombre de usuario"
+                                    class="normal-input  <%= locals.errors && errors.username ? 'invalido' : null%> "
+                                    value="<%= locals.oldData ? oldData.username : null %>">
+                            </div>
+                            <% if (locals.errors && errors.username) { %>
+                                <div class="mensaje-de-error">
+                                    <i class="fas fa-exclamation-triangle"></i>
+                                    <%= errors.username.msg %>
 
-                    <div>
-                        <h4 class="aclaracion-1">Fecha de nacimiento</h4>
-                        <input type="date" name="dateOfBirth" id="nacimiento" class = "normal-input" >
-                    </div>
+                                </div>
+                                <% } %>
 
-                    <div>
-                        <input type="text" name="address" placeholder="Domicilio" class = "normal-input  <%= locals.errors && errors.address ? 'invalido' : null%> " 
-                        value="<%= locals.oldData ? oldData.address : null %>">
-                    </div>
-                    <% if (locals.errors && errors.address) { %>
-                        <div class="mensaje-de-error">
-                            <i class="fas fa-exclamation-triangle"></i><%= errors.address.msg %> 
-                        
-                        </div> 
-                        <% } %>
+                                    <div>
+                                        <input type="email" name="email" placeholder="E-mail" id="email"
+                                            class="normal-input  <%= locals.errors && errors.email ? 'invalido' : null%> "
+                                            value="<%= locals.oldData ? oldData.email : null %>">
+                                    </div>
+                                    <% if (locals.errors && errors.email) { %>
+                                        <div class="mensaje-de-error">
+                                            <i class="fas fa-exclamation-triangle"></i>
+                                            <%= errors.email.msg %>
 
-                    <div>
-                        <h4 class="aclaracion">Foto de usuario</h4>
-                        <div class="contenedor-file">
-                            <label for="archivo">Elige un archivo 
-                                <i class="fa-regular fa-folder-open"></i>
-                            </label>
-                            <input type="file" id="archivo" name="userImg" accept=".png, .jpg">
-                            <h3 id="nombre"></h3>
-                        </div>
-                        <% if(locals.errors && errors.userImg){ %>
-                            <div class="mensaje-de-errorImg">
-                                <i class="fas fa-exclamation-triangle"></i><%= errors.userImg.msg %> 
-                            </div> 
-                            <% } %> 
+                                        </div>
+                                        <% } %>
 
-                        <div class="contraseña">
-                            <input type="password" name="password" placeholder="Contraseña" class = "normal-input  <%= locals.errors && errors.password? 'invalido' : null%>" >
-                        </div>
-                        <% if (locals.errors && errors.password) { %>
-                            <div class="mensaje-de-error">
-                                <i class="fas fa-exclamation-triangle"></i><%= errors.password.msg %> 
-                            
-                            </div> 
-                            <% } %>
+                                            <div>
+                                                <h4 class="aclaracion-1">Fecha de nacimiento</h4>
+                                                <input type="date" name="dateOfBirth" id="nacimiento"
+                                                    class="normal-input">
+                                            </div>
 
-                        <div class="contraseña">
-                            <input type="password" name="passwordConfirm"
-                                placeholder="Confirmar contraseña" class = "normal-input  <%= locals.errors && errors.passwordConfirm ? 'invalido' : null%>" >
-                        </div>
-                        <% if (locals.errors && errors.passwordConfirm) { %>
-                            <div class="mensaje-de-error">
-                                <i class="fas fa-exclamation-triangle"></i><%= errors.passwordConfirm.msg %> 
-                            
-                            </div> 
-                            <% } %>
+                                            <div>
+                                                <input type="text" name="address" placeholder="Domicilio"
+                                                    class="normal-input  <%= locals.errors && errors.address ? 'invalido' : null%> "
+                                                    value="<%= locals.oldData ? oldData.address : null %>">
+                                            </div>
+                                            <% if (locals.errors && errors.address) { %>
+                                                <div class="mensaje-de-error">
+                                                    <i class="fas fa-exclamation-triangle"></i>
+                                                    <%= errors.address.msg %>
 
-                        <div>
-                            <button class="enviar" type="submit">Enviar</button>
-                        </div>
-                        <div class="borrar-datos">
-                            <button class="borrar" type="reset">Borrar datos</button>
-                        </div>
+                                                </div>
+                                                <% } %>
 
-                        <div class="ingreso">
-                            <h5 class="google">Ingresar con Google
-                                <i class="fab fa-google"></i>
-                            </h5>
-                            <h5 class="facebook">Ingresar con Facebook
-                                <i class="fab fa-facebook-square"></i>
-                            </h5>
-                        </div>
-                    </div>
+
+                                                    
+                                                    <div>
+                                                        <h4 class="aclaracion">Foto de usuario</h4>
+                                                        <div class="contenedor-file">
+                                                            
+                                                            <label for="archivo">Elige un archivo
+                                                                <i class="fa-regular fa-folder-open"></i>
+                                                            </label>
+                                                            <input type="file" id="archivo" name="userImg"
+                                                                accept=".png, .jpg">
+                                                            <h3 id="nombre"></h3>
+                                                        </div>
+                                                        <% if(locals.errors && errors.userImg){ %>
+                                                            <div class="mensaje-de-errorImg">
+                                                                <i class="fas fa-exclamation-triangle"></i>
+                                                                <%= errors.userImg.msg %>
+                                                            </div>
+                                                            <% } %>
+
+                                                                <div class="contraseña">
+                                                                    <input type="password" name="password"
+                                                                        placeholder="Contraseña"
+                                                                        class="normal-input  <%= locals.errors && errors.password? 'invalido' : null%>">
+                                                                </div>
+                                                                <% if (locals.errors && errors.password) { %>
+                                                                    <div class="mensaje-de-error">
+                                                                        <i class="fas fa-exclamation-triangle"></i>
+                                                                        <%= errors.password.msg %>
+
+                                                                    </div>
+                                                                    <% } %>
+
+                                                                        <div class="contraseña">
+                                                                            <input type="password"
+                                                                                name="passwordConfirm"
+                                                                                placeholder="Confirmar contraseña"
+                                                                                class="normal-input  <%= locals.errors && errors.passwordConfirm ? 'invalido' : null%>">
+                                                                        </div>
+                                                                        <% if (locals.errors && errors.passwordConfirm)
+                                                                            { %>
+                                                                            <div class="mensaje-de-error">
+                                                                                <i
+                                                                                    class="fas fa-exclamation-triangle"></i>
+                                                                                <%= errors.passwordConfirm.msg %>
+
+                                                                            </div>
+                                                                            <% } %>
+
+                                                                                <div>
+                                                                                    <button class="enviar"
+                                                                                        type="submit">Enviar</button>
+                                                                                </div>
+                                                                                <div class="borrar-datos">
+                                                                                    <button class="borrar"
+                                                                                        type="reset">Borrar
+                                                                                        datos</button>
+                                                                                </div>
+
+                                                                                <div class="ingreso">
+                                                                                    <h5 class="google">Ingresar con
+                                                                                        Google
+                                                                                        <i class="fab fa-google"></i>
+                                                                                    </h5>
+                                                                                    <h5 class="facebook">Ingresar con
+                                                                                        Facebook
+                                                                                        <i
+                                                                                            class="fab fa-facebook-square"></i>
+                                                                                    </h5>
+                                                                                </div>
+                                                    </div>
 
             </form>
 
@@ -158,6 +181,15 @@
                     document.querySelector('#nombre').innerText = 
                     archivo.files[0].name
                 });
+
+                function previewImage(event, querySelector){
+                    const input = event.target;
+                    $imgPreview = document.querySelector(querySelector)
+                    if(!input.files.length)return
+                    file = input.files[0];
+                    objectURL=URL.createObjectURL(file);
+                    $imgPreview.src = objectURL
+                }
             </script>
 
             <%- include('./partials/whatsapp'); %>
