--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -25,9 +25,25 @@
             <a href="/user/productCart"><i class="fa badge" style="font-size:24px" value=5>&#xf07a;</i></a>
         </div>
     </div>
-    <div class="burger-menu">
-        <i class="fa-solid fa-bars"></i>
-    </div>
+
+    <nav class="nav-burger"> <!-- CLASS NAV -->
+        <div class="nav-burger-container"> <!-- CLASS NAV__CONTAINER -->
+            <label for="menu" class="nav-burger-label"> <!-- CLASS NAV__LABEL -->
+                <img src="/img/icon-burger.svg" alt="" class="burger-img"> <!-- CLASS NAV__IMG -->
+            </label>
+                <input type="checkbox" id="menu" class="nav-burger-input"> <!-- CLASS NAV__INPUT -->
+
+                <div class="nav-menu-burger"> <!-- CLASS NAV__MENU -->
+                    <a href="/product/list" class="nav-burger-item">Productos</a> <!-- CLASS NAV__ITEM -->
+                    <a href="#" class="nav-burger-item">Arma tu PC</a> <!-- CLASS NAV__ITEM -->
+                    <a href="#" class="nav-burger-item">PC Armados</a>
+                    <a href="#" class="nav-burger-item">Quienes somos</a>
+                    <a href="#" class="nav-burger-item">Ayuda</a> <!-- CLASS NAV__ITEM -->
+                </div>
+        </div>
+    </nav>
+
+    
     <nav class="nav-bar">
 
         <a href="/product/list"> 
