--- a/src/views/productListUser.ejs
+++ b/src/views/productListUser.ejs
@@ -75,28 +75,25 @@
                                         <% let valorFinal=producto.precio-(producto.precio*producto.descuento)/100 %>
 
 
-                                            <article onclick="location.href='/product/detail/<%=producto.id%>';"
-                                                style="cursor: pointer;">
-                                                <img src="/img/<%= producto.img %>" alt="producto" class="prod-image">
-                                                <div class="productInfo">
-                                                    <p class="final-value">$<%= valorFinal.toFixed(0) %>
-                                                    </p>
-
-                                                    <% if (producto.descuento!=0) { %>
-                                                        <p class="price">$<%= producto.precio %>
-                                                        </p>
-                                                        <p class="discount">
-                                                            <%= producto.descuento %> %off
-                                                        </p>
-                                                        <% } else { %>
-                                                            <br>
-
-                                                            <% } %>
-                                                                <a href="/product/detail" class="description">
-                                                                    <%= producto.titulo %>
-                                                                </a>
-                                                </div>
-                                            </article>
+                                        <article onclick="location.href='/product/detail/<%=producto.id%>';" style="cursor: pointer;">
+                                            <img src="/img/<%= producto.img %>" alt="producto" class="prod-image">
+                                            <div class="container-product">
+                                            <div class="productInfo">
+                                                <p class="final-value">$<%= valorFinal.toFixed(0) %></p>
+                                                <a href="/product/detail" class="description"><%= producto.titulo %></a>
+                                            </div>
+                    
+                                            <div class="price-discount">
+                                                <% if (producto.descuento!=0) { %>
+                                                    <p class="price">$<%= producto.precio %></p>
+                                                    <p class="discount"><%= producto.descuento %> %off</p> 
+                                                <% } else { %>
+                                                    <br>
+                                                    
+                                                <% } %>
+                                            </div>
+                                        </div>
+                                        </article>
                                             <% }) %>
                                             <% }) %>
 
