--- a/public/css/header.css
+++ b/public/css/header.css
@@ -135,26 +135,112 @@
 
 
 /* BURGUER MENU */
-.burger-menu {
-    font-size: 1.5em;
-    border-top: solid 1px #cac7ff;
-    border-bottom: solid 1px #4c9800;
-    background-color: #000;
-    padding-top: 10px;
-    box-shadow: 0rem -0.3rem 2rem 0.2rem #7EFF00;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.burger-menu i {
-    text-align: center;
-    border-radius: 15%;
-    border: solid 1px #7EFF00;
-    padding: 10px;
-    color: #7EFF00;
-    margin-bottom: 15px;
+
+.nav-burger-input:checked + .nav_menu-burger {
+    background-color: #4A4A4A;
 }
+
+.nav-burger {
+    background-color: #000;
+    height: 80px;
+    color: white;
+}
+
+.nav-burger-input {
+    display: none;
+}
+
+
+.nav-burger-container{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 20px 3px #7EFF00;
+}
+
+
+.nav-burger-label{
+    display: block;
+    background-color: #7EFF00;
+    height: 40px;
+    width: 40px;
+    border-radius: 8px;
+}
+
+.burger-img {
+    width: 40px;
+}
+
+.nav-menu-burger{
+    display: grid;
+    grid-auto-flow: column;
+}
+
+.nav-burger-item {
+    color: white;
+    text-decoration: none;
+    --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
+}
+
+
+.nav-burger-item:hover{
+   --clippy: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+}
+
+.nav-burger-label{
+    display: block;
+    cursor: pointer;
+}
+
+.nav-menu-burger{
+    position: absolute;
+    top: 245px;
+    bottom: 0;
+    background:rgb(37, 37, 37);
+    width: 100%;
+    height: 350px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    border-top: 1px solid #7EFF00;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: clip-path 0.6s;
+}
+
+.nav-menu-burger a{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 18px;
+    width: 80%;
+    height: 40px;
+    border-bottom: 1px solid #626262;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+.nav-menu-burger a:hover {
+    width: 70%;
+    border-bottom: 1px solid #7EFF00;
+}
+
+
+.nav-burger-input:checked + .nav-menu-burger {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+
+}
+
+
 
 
 @media (min-width: 767px) {
@@ -201,12 +287,17 @@
         font-size: 14px;
     }
 
-    .burger-menu {
-        display: none;
-    }
 
     .nav-bar {
         display: flex
+    }
+
+    .nav-burger-label{
+        display: none;
+    }
+
+    .nav-burger {
+        display: none;
     }
 
 }
