--- a/public/css/header.css
+++ b/public/css/header.css
@@ -215,6 +215,7 @@
     border-top: 1px solid #7EFF00;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     transition: clip-path 0.6s;
+    z-index: 100;
 }
 
 .nav-menu-burger a{
