--- a/public/css/header.css
+++ b/public/css/header.css
@@ -146,6 +146,7 @@
     background-color: #4A4A4A;
 }
 
+
 .nav-burger {
     background-color: #000;
     height: 80px;
@@ -174,6 +175,12 @@
     height: 40px;
     width: 40px;
     border-radius: 8px;
+    transition: all 0.4s;
+}
+
+.nav-burger-label:hover{
+    transform: scale(0.95);
+    background-color: #61c100;
 }
 
 .burger-img {
@@ -215,6 +222,7 @@
     border-top: 1px solid #7EFF00;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     transition: clip-path 0.6s;
+    z-index: 100;
 }
 
 .nav-menu-burger a{
