--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -85,7 +85,7 @@
         </section>
         <section class="container-description">
             <h3 class="titulo_descripcion_prod">Descripción el Producto</h3>
-            <p class="prod-description"><%= producto.descripcionDetallada %> </p>
+            <p class="prod-description"><%= producto.longDesc %> </p>
 
         </section>
         <section class="product-atributes">
