crud productos full

--- a/src/views/productEdit.ejs
+++ b/src/views/productEdit.ejs
@@ -48,7 +48,7 @@
                         class= "large-description" 
                         name="descripcionDetallada" 
                         placeholder="Descripcion extensa" 
-                        id="large-description"  ><%=producto.descripcionDetallada %></textarea>
+                        id="large-description"  ><%=producto.longDesc %></textarea>
                     </div>
 
 
@@ -57,7 +57,7 @@
                         <label for="archivo">Elige un archivo 
                             <i class="fa-regular fa-folder-open"></i>
                         </label>
-                        <input type="file" id="archivo" name="userImg" accept=".png, .jpg">
+                        <input type="file" id="archivo" name="img" accept=".png, .jpg">
                         <h3 id="nombre"></h3>
                     </div>
 
