--- a/src/views/userProfile.ejs
+++ b/src/views/userProfile.ejs
@@ -52,6 +52,11 @@
             <div class="cerrar-sesion">
                 <button>Cerrar sesión</button>
             </div>
+            <form action="" method="POST">
+                <div class="borrarCuenta">
+                    <button type="submit">Borrar cuenta</button>
+                </div>
+            </form>
         </div>
     </section>
         </main>
