--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -57,7 +57,7 @@
                         <% } %>
 
                             <div>
-                                <input type="text" name="username" placeholder="Nombre de usuario"
+                                <input type="text" name="userName" placeholder="Nombre de usuario"
                                     class="normal-input  <%= locals.errors && errors.username ? 'invalido' : null%> "
                                     value="<%= locals.oldData ? oldData.username : null %>">
                             </div>
@@ -110,7 +110,7 @@
                                                             <label for="archivo">Elige un archivo
                                                                 <i class="fa-regular fa-folder-open"></i>
                                                             </label>
-                                                            <input type="file" id="archivo" name="userImg"
+                                                            <input type="file" id="archivo" name="avatar"
                                                                 accept=".png, .jpg">
                                                             <h3 id="nombre"></h3>
                                                         </div>
