errores y sweet alert

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,7 +16,7 @@
         <div class="icons-top-bar">
             <% if (locals.isLogged) { %>
              <a href="/user/profile"><i class="fa-regular fa-user"></i> <%= locals.userLogged.fullName %> </a>
-             <a href="/user/logout"> LogOut </a>
+             <a href="/user/logout"> Logout </a>
              <% } else { %>
             <a href="/user/login"><i class="fa-regular fa-user"></i> Ingresar</a>
             <a href="/user/register">Registrarse</a>
