--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -321,20 +321,58 @@ section {
     width: 100%;
 }
 
-.cerrar-sesion button{
+.cerrar-sesion {
+    display: flex;
+    justify-content: space-around;
+}
+
+.cerrar-sesion a{
     background-color: #303030;
     color: #fff;
     border: none;
-    height: 30px;
-    width: 30%;
+    padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
     transition: all 0.3s;
 }
 
-.cerrar-sesion button:hover{
-    background-color:#202020 ;
+#logout:hover {
+    background-color:red;
+    color: #fff;
 }
+
+.cerrar-sesion a:hover {
+    background-color: #63c500;
+    color: black;
+}
+
+.cerrar-sesion a {
+    text-decoration: none;
+}
+
+.swal-overlay {
+    background-color: rgba(43, 165, 137, 0.20);
+  }
+
+  .swal-modal {
+    background-color: #1f1f1f;
+    border: 3px solid #5dbb00;
+  }
+
+  .swal-title {
+    color: white;
+    margin: 0px;
+    font-size: 16px;
+    margin-bottom: 28px;
+  }
+
+  .swal-text {
+    padding: 17px;
+    display: block;
+    margin: 22px;
+    text-align: center;
+    color: white;
+  }
 
 
 /* WHATSAPP */
